testdata/baselines/reference/submodule/compiler/reactHOCSpreadprops.errors.txt
reactHOCSpreadprops.tsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== reactHOCSpreadprops.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import React = require("react");
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    function f<P>(App: React.ComponentClass<P> | React.StatelessComponent<P>): void {
        class C extends React.Component<P & { x: number }> {
            render() {
                return <App {...this.props} />;
            }
        }
    }
    